--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script type="text/javascript" src="https://www.w3schools.com/js/myScript.js">
-    </script>
-</head>
-<body>
-    <!-- <script type="text/javascript">
-        alert("hello");
-    </script> -->
-    <p id="demo">안녕!</p>
-    <button onclick="myFunction()">클릭하시오</button> <!-- 버튼을 클릭하면 js에 정의된 내용이 실행됨 -->
-    <hr>
-<script type="text/javascript">
-    //html에 직접 쓰기
-    document.write("hello!!!");
-
-    console.log("콘솔창에 쓰기;")
-</script>
-</body>
-</html>
+<html></html>
