li 텍스트 추가

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         웹페이지 입니다.
         </h1>
         <ul>
-            <li></li>
-            <li></li>
+            <li>텍스트1</li>
+            <li>텍스트2</li>
         </ul>
     </body>
 </html>
