--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
-    <head></head>
+    <head>
+        <title></title>
+    </head>
     <body>
+        <h1>
         웹페이지 입니다.
+        </h1>
     </body>
 </html>
