--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         웹페이지 입니다.
         </h1>
         <ul>
-            <li>텍스트1</li>
-            <li>텍스트2</li>
+            <li>Git</li>
+            <li>Branch</li>
+            <li>Branch2</li>
         </ul>
     </body>
 </html>
