--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li>브랜치</li>
             <li>Branch2</li>
             <li>Branch3</li>
+            <li>브랜치2</li>
         </ul>
     </body>
 </html>
