--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li>Branch</li>
             <li>Branch2</li>
             <li>Branch3</li>
+            <li>Branch4</li>
         </ul>
     </body>
 </html>
