--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li>Branch3</li>
             <li>브랜치2</li>
             <li>push</li>
+            <li>commit</li>
         </ul>
     </body>
 </html>
