--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li>브랜치2</li>
             <li>push</li>
             <li>commit</li>
+            <li>clone</li>
         </ul>
     </body>
 </html>
