remote_pull_new_repo 추가

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li>push</li>
             <li>commit</li>
             <li>clone</li>
+            <li>remote_pull_new_repo</li>
         </ul>
     </body>
 </html>
