--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li>push</li>
             <li>commit</li>
             <li>clone</li>
+            <li>동기화</li>
         </ul>
     </body>
 </html>
